Add optional one-level grouping to Profile, Project and Forward Node lists #274